1997-12-24  Tim Pierce  <twp@skepsis.com>

	* scheme.texi (Port Operations): New node for documenting
	miscellanous port operations.

1997-12-13  Tim Pierce  <twp@skepsis.com>

	* scheme.texi, posix.texi: Documented each procedure as `procedure',
	`primitive' or `syntax' as appropriate.
	(Records): Change record-type-field-names to record-type-fields.
	(Low level thread primitives): Change with-new-thread to
	call-with-new-thread. 

Sun Dec  7 22:47:22 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* posix.texi (Processes): add "system" procedure.

1997-11-23  Mark Galassi  <rosalia@cygnus.com>

	* gh.texi (Starting and controlling the interpreter): added
	documentation for gh_repl() -- gh_repl() has changed since I saw
	the scm_shell() routine.

1997-11-19  Tim Pierce  <twp@twp.tezcat.com>

	* scheme.texi (String Fun): New node.
	(Hash Tables): Added `get-handle' and `create-handle!' docs.

	* posix.texi (Networking Databases): Add docs for gethost, getnet,
	getserv, getproto.  Expanded on miscellaneous docs.

1997-11-18  Tim Pierce  <twp@twp.tezcat.com>

	* posix.texi: New file; moved docs for POSIX interface here.
	* Makefile.am: Add posix.texi.
	* Makefile.in: Regenerated.
	* guile-ref.texi: Reorganize top-level menu.  @include posix.texi.
	* scheme.texi: Moved many nodes around, some restructuring
	(e.g. new "Data Structures" node for records, structures, arrays,
	hash tables, and so on).

1997-10-19  Mark Galassi  <rosalia@cygnus.com>

	* gh.texi (Calling Scheme procedures from C): added many routines
	as I go through R4RS and try to complete the gh_ interface.

Wed Oct  8 04:51:54 1997  Gary Houston  <ghouston@actrix.gen.nz>

	*  scheme.texi (Dynamic Roots): added batch mode procedures.

1997-10-03  Mikael Djurfeldt  <mdj@nada.kth.se>

	* scheme.texi (Vtables): Changed 0 --> @code{vtable-index-layout};
	Changed @code{struct-vtable-offset} --> @code{vtable-offset-user};
	Added short note about the print call-back initializer.  (This