@@ -209,6 +209,13 @@ As another example, here is a simple replacement for the POSIX
 (newline)
 @end example
 
+@deffn procedure command-line
+@deffnx primitive program-arguments
+Return a list of the command-line arguments passed to the currently
+running program.  If the program invoked Guile with the @samp{-s},
+@samp{-c} or @samp{--} switches, these procedures ignore everything up
+to and including those switches.
+@end deffn
 
 @node Invoking Guile
 @section Invoking Guile
