@@ -1,7 +1,15 @@
+Sat Dec 27 19:02:36 1997  Tim Pierce  <twp@skepsis.com>
+
+	* appendices.texi (Internals, Symbols): New nodes.
+	* scheme.texi (Configuration Data): New node.
+
+1997-12-27  Tim Pierce  <twp@skepsis.com>
+
+	* guile-ref.texi (Bitwise Operations): New description.
+
 1997-12-24  Tim Pierce  <twp@skepsis.com>
 
-	* scheme.texi (Port Operations): New node for documenting
-	miscellanous port operations.
+	* scheme.texi (Port Operations, Evaluation): New nodes.
 
 1997-12-13  Tim Pierce  <twp@skepsis.com>
 
